added css styling to dropdown menu

--- a/src/main/resources/templates/core/navbar.html
+++ b/src/main/resources/templates/core/navbar.html
@@ -2,5 +2,27 @@
   <div class="logo">
     <h1>a</h1>
   </div>
-  <p>This is a second test element</p>
+  <button class="menu-btn" onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></button>
+  <ul sec:authorize="isAuthenticated()" id="menu-options" class="menu-links hidden">
+    <li>Logged in as <span sec:authentication="principal.attributes['nickname']"></span></li>
+    <li><a href="/spaces">Find a Space</a></li>
+    <li><a href="/spaces/new">List Your Space</a></li>
+    <li><a href="#" onclick="submitForm()">Log Out</a></li>
+  </ul>
+  <ul th:unless="${#authorization.expression('isAuthenticated()')}" id="menu-options" class="menu-links hidden">
+    <li><a href="/oauth2/authorization/okta">Log In / Sign Up</a></li>
+    <li><a href="/spaces">Find a Space</a></li>
+  </ul>
+<!--  <form id="logout-form" class="hidden" action="/logout" method="POST">-->
+<!--    <input name="_csrf" type="hidden" th:name="_csrf" th:value="${_csrf.token}">-->
+<!--  </form>-->
+  <script>
+    function toggleMenu() {
+        const menu = document.getElementById('menu-options');
+        menu.classList.toggle('hidden');
+    }
+    function submitForm() {
+      document.getElementById('logout-form').submit()
+    }
+  </script>
 </nav>
