--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,5 +1,6 @@
 body {
     margin: 0px;
+    font-family: 'Roboto', sans-serif;
 }
 
 /* NAVBAR */
@@ -18,6 +19,47 @@ body {
 .logo h1 {
     margin: 8px;
 }
+
+.hidden {
+    display: none;
+}
+
+/* Menu Button Styling */
+.menu-btn {
+    margin: 16px;
+    font-size: 40px;
+    width: 72px;
+    height: 72px;
+    border: 1px solid black;
+    border-radius: 8px;
+}
+
+/* Dropdown Menu Styling */
+.menu-links {
+    list-style: none;
+    position: absolute;
+    top: 96px; /* Adjust this value based on header height */
+    right: 16px;
+    background-color: #F5F5F5;
+    padding: 8px;
+    border-radius: 4px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Menu item styling */
+.menu-links li {
+    padding: 12px 16px;
+}
+
+.menu-links li a {
+    text-decoration: none;
+    color: black;
+}
+
+.menu-links li a:hover {
+    color: #D9D9D9;
+}
+
 
 /* POSTS */
 .posts-main {
