updates to post templates

--- a/src/main/resources/templates/core/sidebar.html
+++ b/src/main/resources/templates/core/sidebar.html
@@ -1,5 +1,8 @@
-<aside class="sidebar" th:fragment="sidebar">
-    <a href="/profile/me"><p>My Profile</p></a>
-    <a href="/"><p>My Feed</p></a>
-    <a href="/friend-requests"><p>Friend Requests</p></a>
-</aside>
+<div>
+    <aside class="sidebar" th:fragment="sidebar">
+        <a href="/profile/me" class="button">My Profile</a>
+        <a href="/" class="button">My Feed</a>
+        <a href="/friend-requests" class="button">Friend Requests</a>
+    </aside>
+    <div class="spacer-sidebar"></div>
+</div>
