--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -3,12 +3,45 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+p {
+    margin: 0;
+}
+
+.container {
+    display: flex;
+    width: 100vw;
+}
+
+.button {
+    font-size: 16px;
+    border-radius: 16px;
+    border: 1px solid black;
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    color: black;
+    padding: 16px;
+    margin-bottom: 40px;
+}
+
+.button:hover {
+    background-color: #D9D9D9;
+}
+
 /* NAVBAR */
+
 .navbar {
+    position: fixed;
+    width: 100vw;
     display: flex;
     justify-content: space-between;
     background-color: #D9D9D9;
     margin: 0px;
+    z-index: 5;
+}
+
+.spacer-navbar {
+    height: 104px;
 }
 
 .logo {
@@ -17,7 +50,7 @@ body {
 }
 
 .logo h1 {
-    margin: 8px;
+    margin: 8px 16px;
 }
 
 .hidden {
@@ -60,8 +93,110 @@ body {
     color: #D9D9D9;
 }
 
+/* SIDEBAR */
+
+.sidebar {
+    position: fixed;
+    height: 100vh;
+    width: 280px;
+    padding: 32px;
+    border-right: 1px solid #D9D9D9;
+}
+
+.spacer-sidebar {
+    width: 344px;
+}
 
 /* POSTS */
+
+.container-posts {
+    width: 100%;
+    padding: 32px 20%;
+}
+
+.feed {
+
+}
+
+.card {
+    border: 1px solid black;
+    border-radius: 8px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 16px;
+}
+
+.poster-info {
+    margin-bottom: 8px;
+}
+
+.poster-info h3 {
+    font-size: 18px;
+    font-weight: normal;
+}
+
+.poster-info p {
+    color: #D9D9D9;
+    font-size: 12px;
+}
+
+.post-content {
+    padding: 4px 0;
+}
+
+.card-top {
+    padding: 12px 16px;
+}
+
+.card-bottom {
+    border-top: 1px solid #D9D9D9;
+    padding: 8px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.post-interaction {
+    display: flex;
+}
+
+.post-interaction > * {
+    margin: 0 4px;
+    color: black;
+}
+
+.form-post {
+    width: 100%;
+    padding: 12px 16px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.input-post {
+    height: 40px;
+    flex-grow: 1;
+    margin: 0 8px;
+    border-radius: 16px;
+    border: none;
+    background-color: #F5F5F5;
+    padding: 0 16px;
+    font-size: 16px;
+}
+
+.submit-post {
+    height: 40px;
+    padding: 0 16px;
+    border: 1px solid black;
+    background-color: white;
+    border-radius: 16px;
+    font-size: 20px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
+
 .posts-main {
     border-collapse: collapse;
 }
