--- a/src/main/resources/templates/core/navbar.html
+++ b/src/main/resources/templates/core/navbar.html
@@ -1,21 +1,25 @@
-<nav class="navbar" th:fragment="navbar">
-  <div class="logo">
-    <h1>a</h1>
-  </div>
-  <button class="menu-btn" onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></button>
-  <ul sec:authorize="isAuthenticated()" id="menu-options" class="menu-links hidden">
-    <li>Logged in as <span sec:authentication="principal.attributes['nickname']"></span></li>
-    <li><a href="/spaces">Find a Space</a></li>
-    <li><a href="/spaces/new">List Your Space</a></li>
-    <li><a href="#" onclick="submitForm()">Log Out</a></li>
-  </ul>
-  <ul th:unless="${#authorization.expression('isAuthenticated()')}" id="menu-options" class="menu-links hidden">
-    <li><a href="/oauth2/authorization/okta">Log In / Sign Up</a></li>
-    <li><a href="/spaces">Find a Space</a></li>
-  </ul>
-<!--  <form id="logout-form" class="hidden" action="/logout" method="POST">-->
-<!--    <input name="_csrf" type="hidden" th:name="_csrf" th:value="${_csrf.token}">-->
-<!--  </form>-->
+<div>
+  <nav class="navbar" th:fragment="navbar">
+    <div class="logo">
+      <h1>a</h1>
+    </div>
+    <button class="menu-btn" onclick="toggleMenu()"><i class="fa-solid fa-bars"></i></button>
+    <ul sec:authorize="isAuthenticated()" id="menu-options" class="menu-links hidden">
+      <li><a href="#"><span sec:authentication="principal.attributes['nickname']"></span></a></li>
+      <li><a href="/posts">My feed</a></li>
+      <li><a href="#">Friend requests</a></li>
+      <li><a href="#">DMs</a></li>
+      <li><a href="#" onclick="submitForm()">Log Out</a></li>
+    </ul>
+    <ul th:unless="${#authorization.expression('isAuthenticated()')}" id="menu-options" class="menu-links hidden">
+      <li><a href="/oauth2/authorization/okta">Log In / Sign Up</a></li>
+      <li><a href="/spaces">Find a Space</a></li>
+    </ul>
+    <!--  <form id="logout-form" class="hidden" action="/logout" method="POST">-->
+    <!--    <input name="_csrf" type="hidden" th:name="_csrf" th:value="${_csrf.token}">-->
+    <!--  </form>-->
+  </nav>
+  <div class="spacer-navbar"></div>
   <script>
     function toggleMenu() {
         const menu = document.getElementById('menu-options');
@@ -25,4 +29,4 @@
       document.getElementById('logout-form').submit()
     }
   </script>
-</nav>
+</div>
