changes to user model

--- a/src/main/resources/templates/core/sidebar.html
+++ b/src/main/resources/templates/core/sidebar.html
@@ -1,8 +1,9 @@
 <div>
     <aside class="sidebar" th:fragment="sidebar">
         <a href="/profile/me" class="button">My Profile</a>
-        <a href="/" class="button">My Feed</a>
+        <a href="/posts" class="button">My Feed</a>
         <a href="/friend-requests" class="button">Friend Requests</a>
+        <a href="/conversations" class="button">Conversations</a>
     </aside>
     <div class="spacer-sidebar"></div>
 </div>
