displays time since post and sorts by most recent

--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -10,11 +10,11 @@
         <div th:replace="~{core/sidebar :: div}"></div>
         <div id="feed" class="container-posts">
             <div class="card post-something">
-                <form class="form-post" th:action="@{/posts}" th:object="${post}" method="post">
+                <form class="form-post" th:action="@{/posts}" th:object="${post}" method="POST">
                     <h3><i class="fa-regular fa-message"></i></h3>
-                    <input type="hidden" th:attr="name='user_id'" th:value="${#authentication.principal.attributes['sub']}">
-                    <input type="hidden" th:attr="name='friends_only'" th:value="true">
-                    <input type="hidden" th:attr="name='date_time'" th:value="${currentTime}">
+                    <input type="hidden" th:attr="name='userId'" th:value="${#authentication.principal.attributes['sub']}">
+                    <input type="hidden" th:attr="name='friendsOnly'" th:value="false">
+                    <input type="hidden" th:attr="name='dateTime'" th:value="${currentTime}">
                     <input type="text"
                            class="input-post"
                            th:field="*{content}"
