formatted friends sidebar

--- a/src/main/resources/templates/core/sidebar.html
+++ b/src/main/resources/templates/core/sidebar.html
@@ -1,8 +1,8 @@
 <div>
-    <aside class="sidebar" th:fragment="sidebar">
+    <aside class="sidebar position-fixed" th:fragment="sidebar">
         <a href="/profile/me" class="button">My Profile</a>
         <a href="/posts" class="button">My Feed</a>
-        <a href="/friend-requests" class="button">Friend Requests</a>
+        <a href="/friends" class="button">Friends</a>
         <a href="/conversations" class="button">Conversations</a>
     </aside>
     <div class="spacer-sidebar"></div>
