--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,14 +1,21 @@
 body {
     margin: 0px;
-}
-
-/* NAVBAR */
-.navbar {
     font-family: 'Roboto', sans-serif;
 }
 
-p {
+h1, h2, h3, h4, h5, h6, p {
     margin: 0;
+}
+
+h3 {
+    font-size: 18px;
+    font-weight: normal;
+}
+
+h5 {
+    color: #A5A5A5;
+    font-size: 12px;
+    font-weight: normal;
 }
 
 .container {
@@ -30,6 +37,16 @@ p {
 
 .button:hover {
     background-color: #D9D9D9;
+}
+
+.icon-group {
+    display: flex;
+    align-items: center;
+}
+
+.icon-group > * {
+    color: black;
+    margin: 0 4px;
 }
 
 /* NAVBAR */
@@ -100,15 +117,92 @@ p {
 /* SIDEBAR */
 
 .sidebar {
-    position: fixed;
     height: 100vh;
     width: 280px;
     padding: 32px;
     border-right: 1px solid #D9D9D9;
 }
 
+.position-fixed {
+    position: fixed;
+}
+
 .spacer-sidebar {
     width: 344px;
+}
+
+.sub-menu {
+    display: flex;
+    align-items: center;
+}
+
+.sub-menu > *:first-child {
+    margin-left: 0px !important;
+}
+
+.sub-menu > * {
+    color: black;
+    margin: 0 8px;
+}
+
+/* FRIENDS */
+
+.search-bar {
+    display: flex;
+    align-items: center;
+    height: 36px;
+    font-size: 16px;
+    color: #A5A5A5;
+    background-color: #F5F5F5;
+    border-radius: 16px;
+    margin: 16px 0;
+}
+
+.search-bar input {
+    border: none;
+    background-color: #F5F5F5;
+    font-size: 16px;
+    margin-left: 4px;
+}
+
+.search-bar i {
+    margin-left: 8px;
+}
+
+.friends-container {
+    margin-top: 24px;
+    padding-top: 24px;
+    border-top: 1px solid #D9D9D9;
+}
+
+.how-many-friends {
+    margin-bottom: 8px;
+}
+
+.friend-card {
+    display: flex;
+    position: relative;
+    width: 288px;
+    left: -16px;
+    align-items: center;
+    height: 64px;
+    padding: 4px 12px;
+    border-radius: 8px;
+}
+
+.friend-card:hover {
+    background-color: #F5F5F5;
+}
+
+.friend-card i {
+    font-size: 24px;
+    padding: 8px;
+    border: 1px solid black;
+    border-radius: 50%;
+}
+
+.friend-info {
+    margin-left: 16px;
 }
 
 /* POSTS */
@@ -116,10 +210,6 @@ p {
 .container-posts {
     width: 100%;
     padding: 32px 20%;
-}
-
-.feed {
-
 }
 
 .card {
@@ -131,16 +221,6 @@ p {
 
 .poster-info {
     margin-bottom: 8px;
-}
-
-.poster-info h3 {
-    font-size: 18px;
-    font-weight: normal;
-}
-
-.poster-info p {
-    color: #D9D9D9;
-    font-size: 12px;
 }
 
 .post-content {
@@ -157,15 +237,6 @@ p {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-}
-
-.post-interaction {
-    display: flex;
-}
-
-.post-interaction > * {
-    margin: 0 4px;
-    color: black;
 }
 
 .form-post {
@@ -197,17 +268,4 @@ p {
     font-size: 20px;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-}
 
-.posts-main {
-    border-collapse: collapse;
-}
-
-.post-main {
-    border: 1px solid #999;
-    padding: 0.5rem;
-    text-align: left;
-    margin-bottom: 0.5rem;;
-}
