--- a/src/main/resources/templates/friends/index.html
+++ b/src/main/resources/templates/friends/index.html
@@ -7,8 +7,12 @@
 
 <div class="container">
   <div th:replace="~{friends/sidebar :: div}"></div>
-
-</div>
+  <div class="main-window">
+    <div class="section-header">
+      <h2>Friend requests</h2>
+      <a href="#">See all</a>
+    </div>
+  </div>
 </div>
 
 </body>
