added friend request cards

--- a/src/main/resources/templates/friends/index.html
+++ b/src/main/resources/templates/friends/index.html
@@ -12,6 +12,49 @@
       <h2>Friend requests</h2>
       <a href="#">See all</a>
     </div>
+
+    <div class="card-row">
+
+      <div class="card section-card">
+        <div class="card-body">
+          <div class="card-avatar">
+            <i class="fa-regular fa-user"></i>
+          </div>
+        </div>
+        <div class="card-info">
+          <h4>Valeria Serci</h4>
+          <h5>4 mutual friends</h5>
+        </div>
+        <div class="card-buttons-vertical">
+          <form>
+            <input type="submit" class="card-button" value="Confirm">
+          </form>
+          <form>
+            <input type="submit" class="card-button" value="Remove">
+          </form>
+        </div>
+      </div>
+
+      <div class="card section-card">
+        <div class="card-body">
+          <div class="card-avatar">
+            <i class="fa-regular fa-user"></i>
+          </div>
+        </div>
+        <div class="card-info">
+          <h4>Sajjad Mollah</h4>
+        </div>
+        <div class="card-buttons-vertical">
+          <form>
+            <input type="submit" class="card-button" value="Confirm">
+          </form>
+          <form>
+            <input type="submit" class="card-button" value="Remove">
+          </form>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
 
