--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -12,6 +12,11 @@ h3 {
     font-weight: normal;
 }
 
+h4 {
+    font-size: 20px;
+    font-weight: bold;
+}
+
 h5 {
     color: #A5A5A5;
     font-size: 12px;
@@ -25,6 +30,32 @@ a {
 .container {
     display: flex;
     width: 100vw;
+}
+
+.card-row {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: clamp(16px, 2vw, 36px);
+    width: 100%;
+}
+
+.card {
+    border: 1px solid black;
+    border-radius: 8px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 16px;
+}
+
+.card-button {
+    font-size: 16px;
+    border-radius: 8px;
+    border: 1px solid black;
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    color: black;
+    padding: 8px;
+    width: 100%;
 }
 
 .button {
@@ -164,12 +195,16 @@ a {
 
 .section-header a {
     color: black;
+    margin-bottom: 32px;
 }
 
 .section-card {
-    height: 480px;
-    width: 240px;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 296px;
+    width: 216px;
+    padding: 16px;
 }
 
 /* FRIENDS */
@@ -232,18 +267,37 @@ a {
     margin-left: 16px;
 }
 
+.card-body {
+    flex-grow: 1;
+}
+
+.card-info {
+    margin-bottom: 16px;
+}
+
+.card-avatar {
+    margin-bottom: 16px;
+    text-align: center;
+}
+
+.card-avatar i {
+    font-size: 96px;
+    padding: 24px 32px;
+    border: 1px solid black;
+    border-radius: 50%;
+}
+
+.card-buttons-vertical {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
 /* POSTS */
 
 .container-posts {
     width: 100%;
     padding: 32px 20%;
-}
-
-.card {
-    border: 1px solid black;
-    border-radius: 8px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    margin-bottom: 16px;
 }
 
 .poster-info {
