hooked up the like button to backend

--- a/src/main/resources/templates/core/head.html
+++ b/src/main/resources/templates/core/head.html
@@ -1,6 +1,7 @@
 <head lang="en" th:fragment="header">
     <meta charset="UTF-8"/>
     <title>Acebook</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
