added margin-top for likedString

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -349,4 +349,11 @@ a {
     font-size: 20px;
 }
 
+.who-liked-this {
+    margin-top: 16px;
+}
+
+.who-liked-this:empty {
+    margin-top: 0 !important;
+}
 
