comment_controller sends a serialized comment_with_data in response

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -23,6 +23,11 @@ h5 {
     font-weight: normal;
 }
 
+h6 {
+    font-size: 14px;
+    font-weight: normal;
+}
+
 a {
     text-decoration: none;
 }
@@ -357,3 +362,12 @@ a {
     margin-top: 0 !important;
 }
 
+/* COMMENTS */
+.comment-header {
+    margin-top: 16px;
+    margin-bottom: 4px;
+}
+
+.comment-body {
+    margin-left: 16px;
+}
