--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -14,7 +14,7 @@
                     <h3><i class="fa-regular fa-message"></i></h3>
                     <input type="hidden" th:attr="name='userId'" th:value="${#authentication.principal.attributes['sub']}">
                     <input type="hidden" th:attr="name='friendsOnly'" th:value="false">
-                    <input type="hidden" th:attr="name='dateTime'" th:value="${currentTime}">
+                    <input type="hidden" th:attr="name='dateTime'" th:value="${null}">
                     <input type="text"
                            class="input-post"
                            th:field="*{content}"
